# modern-dev

./: Dockerfile  README.md  pre-commit  pyproject.toml  skaffold.yaml
.devcontainer/: devcontainer.json
.github/workflows/: demo.yml
dev/manifests/k8s/: deployment.yaml
docs/: build.md  continuous.md  dev.md  devcontainer.md  document-format.md  git-flow.md  hooks.md  how-to-start.md  info.md  istio.md  multi-stage-build.md  poetry.md  pyoxidizer.md  skaffold.md
prod/: deployment.yml  gateway-routes.yml  gateway.yml  namespace.yml  svc.yml
scripts/: configure-dev-env.sh  install-dev-tools.sh
src/: app.py
tests/: load-test.js
